--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-toggle": "^4.0.2",
+    "react-toggle-button": "^2.2.0"
   },
   "keywords": [
     "gatsby"
