--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gatsby-plugin-react-helmet": "^2.0.11",
     "react-helmet": "^5.2.0",
     "react-toggle": "^4.0.2",
-    "react-toggle-button": "^2.2.0"
+    "react-toggle-button": "^2.2.0",
+    "styled-components": "^3.4.5"
   },
   "keywords": [
     "gatsby"
