--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "feather-icons": "^4.7.3",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "react-feather": "^1.1.3",
     "react-helmet": "^5.2.0",
     "react-toggle": "^4.0.2",
     "react-toggle-button": "^2.2.0",
